--- a/src/main/resources/templates/jk/seller/footer.html
+++ b/src/main/resources/templates/jk/seller/footer.html
@@ -1,62 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<th:block th:fragment="footerHTML">
+    <footer class="py-4 bg-light mt-auto">
+        <div class="container-fluid py-5">
+            <div class="d-flex justify-content-between align-items-center small">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- 1. Bootstrap용 css CDN 추가 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <!-- 2. Bootstrap용 Icon CDN / font-awesome 아이콘용 CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- 3. font awesome용 css CDN  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Simple DataTable CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
-    <!-- CSS -->
-    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
-</head>
 
-<body>
-    <th:block th:fragment="footerHTML">
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid py-5">
-                <div class="d-flex justify-content-between align-items-center small">
-                    
-                    
-                    <div class="text-muted">Copyright &copy; <strong>소분소분</strong> All right reserved. PKNU 2023.</div>
-                    <div>
-                        <a href="#!">Privacy Policy</a> &middot; <a href="#!">Terms</a> &amp; <a
-                            href="#!">Conditions</a>
-                    </div>
+                <div class="text-muted">Copyright &copy; <strong>소분소분</strong> All right reserved. PKNU 2023.</div>
+                <div>
+                    <a href="#!">Privacy Policy</a> &middot; <a href="#!">Terms</a> &amp; <a href="#!">Conditions</a>
                 </div>
             </div>
-        </footer>
-    </th:block>
-
-    <!-- 6. Bootstrap용 js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-        crossorigin="anonymous"></script>
-    <!-- Chart.js용 CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="js/chart-area-demo.js"></script>
-    <script src="js/chart-bar-demo.js"></script>
-    <script src="js/chart-pie-demo.js"></script>
-    <!-- Simple DataTable용 JS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
-    <!-- jQuery 추가 -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <!-- font awesome용 스크립트 CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
-        integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
-
-</html>
+        </div>
+    </footer>
+</th:block>
