--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -36,28 +36,28 @@
                 <div class="col-sm">
                     <hr />
                     <div class="form-floating mb-2">
-                        <input type="text" id="id" name="no" value="1234" class="form-control"
-                            onblur="ajaxIDCheck(this)"> <label for="id" id="lbl_check" class="form-label">사업자번호
-                            (아이디)</label>
+                        <input type="text" id="id" name="no" class="form-control"
+                            onblur="ajaxIDCheck(this)" > <label for="id" id="lbl_check"
+                            class="form-label">사업자번호 ( '-'는 생략 )</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="password" id="pw" name="pw" class="form-control" required value="123" /> <label
+                        <input type="password" id="pw" name="pw" class="form-control" required /> <label
                             for="pw" id="lbl_pw" class="form-label">암호</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="password" id="pw1" class="form-control" value="123" required onkeyup="pwCheck()" />
+                        <input type="password" id="pw1" class="form-control" required onkeyup="pwCheck()" />
                         <label for="pw1" id="lbl_pwCheck" class="form-label">암호재확인</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="text" id="name" name="name" class="form-control" value="테스트업체1" required /> <label
+                        <input type="text" id="name" name="name" class="form-control" required /> <label
                             for="name" class="form-label">업체명</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="number" id="phone" name="phone" value="01000000000" class="form-control" />
-                        <label for="phone" class="form-label">연락처 ( "-"는 생략 )</label>
+                        <input type="number" id="phone" name="phone" class="form-control" />
+                        <label for="phone" class="form-label">연락처 ( '-'는 생략 )</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="email" id="email" name="email" class="form-control" value="test@test" />
+                        <input type="email" id="email" name="email" class="form-control" />
                         <label for="email" class="form-label">이메일</label>
                     </div>
                     <hr />
@@ -75,9 +75,9 @@
                             </div>
                         </div>
                         <input type="text" name="address3" class="form-control" id="sample6_detailAddress"
-                            placeholder="상세주소" value="상세주소">
+                            placeholder="상세주소" >
                         <input type="text" name="address4" class="form-control" id="sample6_extraAddress"
-                            placeholder="추가정보" value="추가주소" hidden>
+                            placeholder="추가정보" hidden>
                     </div>
                     <hr />
                     <div class="container text-center d-grid gap-2" style="padding: 0;">
@@ -116,16 +116,24 @@
             var email = document.getElementById("email");
             var sample6_postcode = document.getElementById("sample6_postcode");
             var form = document.getElementById("form");
-
+            //비밀번호 영문자+숫자+특수조합(8~25자리 입력) 정규식
+            var pwCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,25}$/;
 
             if (id.value == "") { // 해당 입력값이 없을 경우 같은말: if(!id.value)
-                alert("아이디를 입력해주세요.");
+                alert("사업자번호(아이디)를 입력해주세요.");
                 id.focus(); //focus(): 커서가 깜빡이는 현상, blur(): 커서가 사라지는 현상
                 return false; //return: 반환하다 return false:  아무것도 반환하지 말아라 아래 코드부터 아무것도 진행하지 말것
             };
 
-            if (id.value.length <= 9) { // 사업자번호가 10자리인지
+        
+            if (id.value.length < 10) { // 사업자번호가 10자리인지
                 alert("사업자번호가 너무 짧습니다. 다시 확인해주세요.");
+                id.focus();
+                return false;
+            };
+
+            if (idCheck.test(id.value)) { // 암호와 암호재확인값이 일치하는지
+                alert("사업자번호에는 문자나 기호를 사용할 수 없습니다.");
                 id.focus();
                 return false;
             };
@@ -141,9 +149,6 @@
                 pw.focus();
                 return false;
             };
-
-            //비밀번호 영문자+숫자+특수조합(8~25자리 입력) 정규식
-            var pwCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,25}$/;
 
             if (!pwCheck.test(pw.value)) { // 암호와 암호재확인값이 일치하는지
                 alert("비밀번호는 영문자+숫자+특수문자 조합으로 8~25자리 사용해야 합니다.");
@@ -212,6 +217,11 @@
             const pw = document.getElementById("pw");
             const pw1 = document.getElementById("pw1");
 
+
+            if(pw1.value.length < 8){
+                document.getElementById("companyNewPwChk").innerText = "새 비밀번호 확인";
+                document.getElementById("companyNewPwChk").style.color = 'gray';
+            }
             if (pw.value !== pw1.value) {
                 document.getElementById("lbl_pwCheck").innerText = "암호가 일치하지 않습니다.";
                 document.getElementById("lbl_pwCheck").style.color = 'red';
@@ -279,6 +289,7 @@
                     }
                 }).open();
         }
+
     </script>
 
 </body>
