--- a/src/main/resources/templates/jk/seller/mypage/updatepw.html
+++ b/src/main/resources/templates/jk/seller/mypage/updatepw.html
@@ -20,6 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller_update_pw.css}'>
 </head>
 
 <body class="sb-nav-fixed">
@@ -29,14 +30,41 @@
     <!-- 전체화면 영역 -->
     <div id="layoutTotal">
         <!-- navbar -->
-            <th:block th:replace="~{/jk/seller/navbar :: navbarHTML}"></th:block>
+        <th:block th:replace="~{/jk/seller/navbar :: navbarHTML}"></th:block>
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
-            <main>
+            <main style="padding-bottom: 10%; background-color: #ffffff;">
                 <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
+                    <div class="container mt-5">
+                        <h1 class="mb-4">비밀번호 변경하기</h1>
+                        <hr />
+                        <form id="form" th:action="@{/seller/updatepw.do}" th:object="${seller}" method="post">
+                            <input type="text" th:field="${seller.no}" hidden /><br />
+                            <div class="mb-3 form-group">
+                                <label for="oldPw" id="companyPwChk" class="form-label">현재 비밀번호</label>
+                                <input type="password" th:field="${seller.pw}" class="form-control" id="oldPw" name="oldPw" required>
+                            </div>
+                            <br>
+
+                            <div class="mb-3 form-group">
+                                <label for="newPw" class="form-label">새 비밀번호</label>
+                                <input type="password" th:field="${seller.newPw}" class="form-control" id="newPw" name="newPw" required>
+                            </div>
+                            <br>
+                            <div class="mb-3 form-group">
+                                <label for="newPwChk" id="companyNewPwChk"class="form-label" >새 비밀번호 확인</label>
+                                <input type="password" th:field="${seller.newPwCheck}" class="form-control" id="newPwChk" name="newPwChk" onblur="pwCheck()" required>
+                            </div>
+                            <br>
+                            <hr>
+                            <button type="button" class="btn btn-outline-dark" onclick="updatePw()">수정하기</button>
+                        </form>
+                    </div>
 
 
-                    <h3>비밀번호수정(seller)</h3>
+
+
+                    <!-- <h3>비밀번호수정(seller)</h3>
                     <hr />
                     <form id="form" th:action="@{/seller/updatepw.do}" th:object="${seller}" method="post">
                         <input type="text" th:field="${seller.no}" hidden /><br />
@@ -45,7 +73,7 @@
                         <input id="newPwChk" type="password" th:field="${seller.newPwCheck}"
                             placeholder="새 비밀번호 확인" /><br />
                         <button type="button" onclick="updatePw()">수정하기</button>
-                    </form>
+                    </form> -->
 
 
                 </div>
@@ -59,13 +87,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
-    <!-- Chart.js용 CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="js/chart-area-demo.js"></script>
-    <script src="js/chart-bar-demo.js"></script>
-    <script src="js/chart-pie-demo.js"></script>
-    <!-- Simple DataTable용 JS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
     <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
@@ -88,19 +109,11 @@
             }
         });
 
-
-        $(document).ready(function () {
-            new simpleDatatables.DataTable("#datatablesSimple", {
-                searchable: true,
-                fixedHeight: true,
-
-            })
-        });
-
         var alertMessage = /*[[${alertMessage}]]*/ "";
         if (alertMessage !== "") {
             alert(alertMessage);
         }
+
         function updatePw() {
             var oldPw = document.getElementById("oldPw");
             var newPw = document.getElementById("newPw");
@@ -135,19 +148,34 @@
             };
 
             if (newPwChk.value !== newPw.value) {
-                alert("새로운 비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
+                alert("새 비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
                 newPwChk.focus();
                 return false;
             };
 
 
-
+            alert("비밀번호가 성공적으로 변경되었습니다.")
             //입력 값 전송
             form.submit();
         }
 
-        function pwcheck() {
+        // 비밀번호 확인
+        const pwCheck = () => {
+            const pw = document.getElementById("newPw");
+            const pw1 = document.getElementById("newPwChk");
 
+            if(pw1.value.length < 8){
+                document.getElementById("companyNewPwChk").innerText = "새 비밀번호 확인";
+                document.getElementById("companyNewPwChk").style.color = 'black';
+            }
+            else if (pw.value !== pw1.value) {
+                document.getElementById("companyNewPwChk").innerText = "암호가 일치하지 않습니다.";
+                document.getElementById("companyNewPwChk").style.color = 'red';
+            }
+            else if(pw.value == pw1.value){
+                document.getElementById("companyNewPwChk").innerText = "암호가 일치합니다.";
+                document.getElementById("companyNewPwChk").style.color = 'blue';
+            }
         }
     </script>
 </body>
