--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -190,7 +190,7 @@
             // console.log(e.value);
             if (e.value.length > 0) {
                 // rest api 호출
-                let url = /*[[@{/api/selleridcheck.json}]]*/""
+                const url = /*[[@{/api/selleridcheck.json}]]*/""
                 url += `?id=${e.value}`;
 
                 // console.log(url);
