--- a/src/main/resources/templates/km/customer/checkout.html
+++ b/src/main/resources/templates/km/customer/checkout.html
@@ -377,8 +377,17 @@
                     // status : "paid"
 
 
-                    console.log("여기서 이제 replace 해줘..?");
-                    location.replace(/*[[@{/customer/home.do}]]*/"");
+                    // console.log("여기서 이제 replace 해줘..?");
+                    // location.replace(/*[[@{/customer/home.do}]]*/"" + `?no=`);
+
+                    Rest로 보내보자~~~
+                    Headers
+                    DocumentType'
+                    aef;jlejsfa
+                    rest Post로 해서 처리 해
+                    처리해서 1이면 
+                    여기서 다시 어쩌고 페이지로 반환해 실패하면 ㄷ~ 해
+                    주문번호..?글킨해
                 } else {
                     console.log(rsp);
                 }
