--- a/src/main/resources/static/css/km/noneed_order/checkoutstyle.css
+++ b/src/main/resources/static/css/km/noneed_order/checkoutstyle.css
@@ -293,12 +293,12 @@ ol {
 	margin-bottom: 0;
 }
 
-/* .checkout__order__product ul li span {
+.checkout__order__product ul li span {
 	font-size: 14px;
 	color: #111111;
 	font-weight: 600;
 	float: right;
-} */
+}
 
 .checkout__order__product ul li .top__text {
 	font-size: 16px;
@@ -306,13 +306,13 @@ ol {
 	font-weight: 600;
 	float: left;
 }
-/* 
+
 .checkout__order__product ul li .top__text__right {
 	font-size: 16px;
 	color: #111111;
 	font-weight: 600;
 	float: right;
-} */
+}
 
 .checkout__order__total {
 	padding-top: 12px;
@@ -330,13 +330,13 @@ ol {
 	line-height: 40px;
 }
 
-/* .checkout__order__total ul li span {
+.checkout__order__total ul li span {
 	color: #000000;
 	float: right;
 	font-weight: 900;
-} */
-/* 
-.checkout__order__widget {
+}
+
+/* .checkout__order__widget {
 	padding-bottom: 10px;
 }
 
