세션에서 업체명 받아오기 및 오류페이지  돌아가기 버튼 활성화

--- a/src/main/resources/templates/error/errorpage.html
+++ b/src/main/resources/templates/error/errorpage.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h3>Error</h3>
-    <a th:href="@{/home.do}">HOME</a>
+    <hr>
+    접근 불가능한 페이지입니다.
+    <br>
+
+    <button type="submit" onclick="javascript:location.href='javascript:history.go(-1);'">이전페이지로</button>
 </body>
 </html>
