--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -52,7 +52,8 @@
                 </div>
             </div>
             <div class="sb-sidenav-footer">
-                <div class="sample">환영합니다, ### 님!</div>
+                <p th:text="'환영합니다,'" style="font-size: small;"></p>
+                <p th:text=" ${companyName} + '님!'"  style="font-size: small; margin-bottom: 0; color: aliceblue;"></p>
             </div>
         </nav>
     </div>
